// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`columnFilterMenus reducer snapshots dispatches oneOnRestOff 1`] = `
Immutable.Map {
  "mockTable": Immutable.Map {
    "mockMenu": Immutable.List [
      Immutable.Map {
        "name": "item1",
        "active": false,
      },
      Immutable.Map {
        "name": "item2",
        "active": false,
      },
      Immutable.Map {
        "name": "item3",
        "active": true,
      },
    ],
  },
}
`;

exports[`columnFilterMenus reducer snapshots dispatches setVisibleMenu 1`] = `
Immutable.Map {
  "mockTable": Immutable.Map {
    "visibleMenu": "Groups",
  },
}
`;

exports[`columnFilterMenus reducer snapshots dispatches toggleAllInverseMenuItems 1`] = `
Immutable.Map {
  "mockTable": Immutable.Map {
    "mockMenu": Immutable.List [
      Immutable.Map {
        "name": "item1",
        "active": true,
      },
      Immutable.Map {
        "name": "item2",
        "active": false,
      },
      Immutable.Map {
        "name": "item3",
        "active": true,
      },
    ],
  },
}
`;

exports[`columnFilterMenus reducer snapshots dispatches toggleAllMenuItemsOff 1`] = `
Immutable.Map {
  "mockTable": Immutable.Map {
    "mockMenu": Immutable.List [
      Immutable.Map {
        "name": "item1",
        "active": false,
      },
      Immutable.Map {
        "name": "item2",
        "active": false,
      },
      Immutable.Map {
        "name": "item3",
        "active": false,
      },
    ],
  },
}
`;

exports[`columnFilterMenus reducer snapshots dispatches toggleAllMenuItemsOn 1`] = `
Immutable.Map {
  "mockTable": Immutable.Map {
    "mockMenu": Immutable.List [
      Immutable.Map {
        "name": "item1",
        "active": true,
      },
      Immutable.Map {
        "name": "item2",
        "active": true,
      },
      Immutable.Map {
        "name": "item3",
        "active": true,
      },
    ],
  },
}
`;

exports[`columnFilterMenus reducer snapshots dispatches toggleMenuItems 1`] = `
Immutable.Map {
  "mockTable": Immutable.Map {
    "mockMenu": Immutable.List [
      Immutable.Map {
        "name": "item1",
        "active": true,
      },
      Immutable.Map {
        "name": "item2",
        "active": false,
      },
      Immutable.Map {
        "name": "item3",
        "active": false,
      },
    ],
  },
}
`;

exports[`columnFilterMenus reducer snapshots dispatches toggleTimeFormat 1`] = `
Immutable.Map {
  "twelveHourFormat": false,
}
`;

exports[`columnFilterMenus reducer snapshots dispatches updateGroupsColumnFilter 1`] = `
Immutable.Map {
  "mockTable": Immutable.Map {
    "Groups": Immutable.List [
      Immutable.Map {
        "id": undefined,
        "name": undefined,
        "active": true,
      },
    ],
  },
}
`;

exports[`columnFilterMenus reducer snapshots dispatches updateSkillsColumnFilter 1`] = `
Immutable.Map {
  "mockTable": Immutable.Map {
    "Skills": Immutable.List [
      Immutable.Map {
        "id": undefined,
        "name": undefined,
        "active": true,
      },
    ],
  },
}
`;

exports[`columnFilterMenus reducer snapshots returns the correct initial state 1`] = `
Immutable.Map {
  "skills": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Has Proficiency",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "queues": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Active Queue",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "permissions": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [],
  },
  "identityProviders": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [],
  },
  "flows": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Active Flow",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "logi": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [],
  },
  "historicalReportFolders": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [],
  },
  "users": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Email",
        "active": true,
      },
      Immutable.Map {
        "name": "External Id",
        "active": true,
      },
      Immutable.Map {
        "name": "Skills",
        "active": true,
      },
      Immutable.Map {
        "name": "Groups",
        "active": true,
      },
      Immutable.Map {
        "name": "Role",
        "active": true,
      },
      Immutable.Map {
        "name": "Presence",
        "active": true,
      },
      Immutable.Map {
        "name": "Platform Status",
        "active": true,
      },
      Immutable.Map {
        "name": "Tenant Status",
        "active": true,
      },
    ],
  },
  "customAttributes": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Attribute Identifier",
        "active": true,
      },
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Realtime Reporting",
        "active": true,
      },
      Immutable.Map {
        "name": "Historical Reporting",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "protectedBranding": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [],
  },
  "tenants": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Identifier",
        "active": true,
      },
      Immutable.Map {
        "name": "Parent Tenant",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "contactLayouts": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "platformRoles": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [],
  },
  "transferLists": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "slas": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Active Sla",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "businessHoursV2": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Active Business Hour",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Timezone2",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
      Immutable.Map {
        "name": "Shared2",
        "active": true,
      },
    ],
  },
  "birst": Immutable.Map {
    "visibleMenu": "none",
    "Columns": undefined,
  },
  "apiKeys": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
      Immutable.Map {
        "name": "Role",
        "active": true,
      },
    ],
  },
  "reasons": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "External Id",
        "active": true,
      },
      Immutable.Map {
        "name": "Shared",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "businessHours": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
      Immutable.Map {
        "name": "Timezone",
        "active": true,
      },
    ],
  },
  "flowDebugger": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [],
  },
  "dataAccessReports": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Report Type",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "reasonLists": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "External Id",
        "active": true,
      },
      Immutable.Map {
        "name": "Shared",
        "active": true,
      },
      Immutable.Map {
        "name": "Is Default",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "messageTemplates": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Type",
        "active": true,
      },
      Immutable.Map {
        "name": "Channels",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "groups": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "agentStateMonitoring": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Channel",
        "active": true,
      },
      Immutable.Map {
        "name": "Agent",
        "active": true,
      },
      Immutable.Map {
        "name": "Groups",
        "active": false,
      },
      Immutable.Map {
        "name": "Skills",
        "active": false,
      },
      Immutable.Map {
        "name": "Work Mode",
        "active": true,
      },
      Immutable.Map {
        "name": "Presence State",
        "active": true,
      },
      Immutable.Map {
        "name": "Reason Code",
        "active": false,
      },
      Immutable.Map {
        "name": "Time in Presence State",
        "active": true,
      },
      Immutable.Map {
        "name": "Offered",
        "active": false,
      },
      Immutable.Map {
        "name": "Accepted",
        "active": false,
      },
      Immutable.Map {
        "name": "Rejected",
        "active": false,
      },
      Immutable.Map {
        "name": "Accepted Rate",
        "active": false,
      },
      Immutable.Map {
        "name": "Away Time",
        "active": false,
      },
      Immutable.Map {
        "name": "Away Rate",
        "active": false,
      },
    ],
    "Groups": Immutable.List [],
    "Skills": Immutable.List [],
    "ReasonLists": Immutable.List [],
    "Direction": Immutable.List [
      Immutable.Map {
        "name": "All",
        "active": true,
      },
      Immutable.Map {
        "name": "Inbound",
        "active": false,
      },
      Immutable.Map {
        "name": "Outbound",
        "active": false,
      },
      Immutable.Map {
        "name": "Do Not Disturb Outbound",
        "active": false,
      },
    ],
    "PresenceState": Immutable.List [
      Immutable.Map {
        "name": "All",
        "active": true,
      },
      Immutable.Map {
        "name": "Idle",
        "active": false,
      },
      Immutable.Map {
        "name": "Busy",
        "active": false,
      },
      Immutable.Map {
        "name": "Away",
        "active": false,
      },
      Immutable.Map {
        "name": "Offline",
        "active": false,
      },
    ],
    "ChannelType": Immutable.List [
      Immutable.Map {
        "name": "Voice",
        "active": true,
      },
      Immutable.Map {
        "name": "Messaging",
        "active": true,
      },
      Immutable.Map {
        "name": "Email",
        "active": true,
      },
      Immutable.Map {
        "name": "SMS",
        "active": true,
      },
      Immutable.Map {
        "name": "Work Item",
        "active": true,
      },
    ],
  },
  "twelveHourFormat": true,
  "lists": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "List Type",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "chatWidgets": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
    ],
  },
  "contactAttributes": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Attribute",
        "active": true,
      },
      Immutable.Map {
        "name": "Label",
        "active": true,
      },
      Immutable.Map {
        "name": "Type",
        "active": true,
      },
      Immutable.Map {
        "name": "Default",
        "active": true,
      },
      Immutable.Map {
        "name": "Mandatory",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "none": Immutable.Map {
    "Columns": Immutable.List [],
    "visibleMenu": "none",
  },
  "digitalChannelsApps": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [],
  },
  "timezones": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [],
  },
  "outboundIdentifiers": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Value",
        "active": true,
      },
      Immutable.Map {
        "name": "channelType",
        "active": true,
      },
      Immutable.Map {
        "name": "flowId",
        "active": false,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "interactionMonitoring": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "InteractionId",
        "active": true,
      },
      Immutable.Map {
        "name": "Agent",
        "active": true,
      },
      Immutable.Map {
        "name": "CustomerId",
        "active": true,
      },
      Immutable.Map {
        "name": "ContactPoint",
        "active": true,
      },
      Immutable.Map {
        "name": "Flow",
        "active": true,
      },
      Immutable.Map {
        "name": "Channel",
        "active": true,
      },
      Immutable.Map {
        "name": "Direction",
        "active": true,
      },
      Immutable.Map {
        "name": "Presence State",
        "active": false,
      },
      Immutable.Map {
        "name": "Start Date",
        "active": false,
      },
      Immutable.Map {
        "name": "StartTime",
        "active": true,
      },
      Immutable.Map {
        "name": "ElapsedTime",
        "active": true,
      },
      Immutable.Map {
        "name": "Monitoring",
        "active": true,
      },
      Immutable.Map {
        "name": "Groups",
        "active": false,
      },
      Immutable.Map {
        "name": "Skills",
        "active": false,
      },
    ],
    "Groups": Immutable.List [],
    "Skills": Immutable.List [],
    "Direction": Immutable.List [
      Immutable.Map {
        "name": "All",
        "active": true,
      },
      Immutable.Map {
        "name": "Inbound",
        "active": false,
      },
      Immutable.Map {
        "name": "Outbound",
        "active": false,
      },
      Immutable.Map {
        "name": "Agent Initiated",
        "active": false,
      },
    ],
    "Monitoring": Immutable.List [
      Immutable.Map {
        "name": "All",
        "active": true,
      },
      Immutable.Map {
        "name": "Monitored",
        "active": false,
      },
      Immutable.Map {
        "name": "Not Monitored",
        "active": false,
      },
    ],
  },
  "listTypes": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [],
  },
  "branding": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [],
  },
  "standardDashboards": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [],
  },
  "outboundIdentifierLists": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "dispositions": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "External Id",
        "active": true,
      },
      Immutable.Map {
        "name": "Shared",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "capacityRules": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [],
  },
  "roles": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Permissions",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "emailTemplates": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
    ],
  },
  "dispositionLists": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "External Id",
        "active": true,
      },
      Immutable.Map {
        "name": "Shared",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "dashboards": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [],
  },
  "integrations": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Type",
        "active": true,
      },
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
    ],
  },
  "dispatchMappings": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [
      Immutable.Map {
        "name": "Name",
        "active": true,
      },
      Immutable.Map {
        "name": "Description",
        "active": true,
      },
      Immutable.Map {
        "name": "Value",
        "active": true,
      },
      Immutable.Map {
        "name": "Interaction Field",
        "active": true,
      },
      Immutable.Map {
        "name": "Channel Type",
        "active": true,
      },
      Immutable.Map {
        "name": "Status",
        "active": true,
      },
      Immutable.Map {
        "name": "Flow",
        "active": true,
      },
    ],
  },
  "regions": Immutable.Map {
    "visibleMenu": "none",
    "Columns": Immutable.List [],
  },
}
`;
